[package]
name = "artemis"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance event-driven framework for building collectors, strategies, and executors"
license = "Apache-2.0"
repository = "https://github.com/akjong/artemis"
homepage = "https://github.com/akjong/artemis"
documentation = "https://docs.rs/artemis"
readme = "README.md"
keywords = ["async", "events", "framework", "collectors", "executors"]
categories = ["asynchronous", "network-programming"]

[dependencies]
async-trait = "0.1.88"
eyre = "0.6.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "macro_demo"
path = "examples/macro_demo.rs"
